@@ -62,17 +62,6 @@ typedef NS_ENUM(NSInteger, QLPreviewStyle) {
 @property (nonatomic, copy) NSDictionary* previewOptions;
 @end
 
-#endif // USE(APPLE_INTERNAL_SDK)
-
-#if HAVE(QUICKLOOK_PREVIEW_ITEM_DATA_PROVIDER) || HAVE(VK_IMAGE_ANALYSIS)
-
-@class UTType;
-@interface QLItem (Staging_74299451)
-- (instancetype)initWithDataProvider:(id /* <QLPreviewItemDataProvider> */)data contentType:(UTType *)contentType previewTitle:(NSString *)previewTitle;
-@end
-
-#endif
-
 #if HAVE(VK_IMAGE_ANALYSIS)
 
 typedef NS_ENUM(NSInteger, QLPreviewActivity) {
@@ -81,6 +70,17 @@ typedef NS_ENUM(NSInteger, QLPreviewActivity) {
     QLPreviewActivityTrim,
     QLPreviewActivityVisualSearch
 };
+
+#endif
+
+#endif // USE(APPLE_INTERNAL_SDK)
+
+#if HAVE(QUICKLOOK_PREVIEW_ITEM_DATA_PROVIDER) || HAVE(VK_IMAGE_ANALYSIS)
+
+@class UTType;
+@interface QLItem (Staging_74299451)
+- (instancetype)initWithDataProvider:(id /* <QLPreviewItemDataProvider> */)data contentType:(UTType *)contentType previewTitle:(NSString *)previewTitle;
+@end
 
 #endif
 
